id.make_local() doesn't work for overridden data #105343

Closed
opened 2023-03-01 15:42:19 +01:00 by Félix · 2 comments

System Information
Operating system: Linux-5.19.0-32-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.161.03

Blender Version
Broken: version: 3.3.3, branch: master, commit date: 2023-01-17 08:40, hash: rB8d94aeb604fa
Worked: (newest version of Blender that worked as expected)

Short description of error
Executing id.make_local() on overridden datablock doesn't work. It does work for pure linked ones.
It's expected to behave exactly like bpy.ops.outliner.id_operation(type="LOCAL").

Exact steps for others to reproduce the error

  • Extract the archive and open main.blend: make_local_bug.tar.xz
  • Run the script in the text editor.
  • "Collection 2", with pure link has been made local, when the overridden "Collection" haven't.
**System Information** Operating system: Linux-5.19.0-32-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.161.03 **Blender Version** Broken: version: 3.3.3, branch: master, commit date: 2023-01-17 08:40, hash: `rB8d94aeb604fa` Worked: (newest version of Blender that worked as expected) **Short description of error** Executing `id.make_local()` on overridden datablock doesn't work. It does work for pure linked ones. It's expected to behave exactly like `bpy.ops.outliner.id_operation(type="LOCAL")`. **Exact steps for others to reproduce the error** - Extract the archive and open `main.blend`: [make_local_bug.tar.xz](/attachments/515ff0b0-aaea-463c-a41e-fbdcad9bc7cc) - Run the script in the text editor. - "Collection 2", with pure link has been made local, when the overridden "Collection" haven't.
Félix added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-01 15:42:20 +01:00

Checked the code, and it doesn't consider overridden ID as linked. This could be achieved with bpy.ops.outliner.id_operation() though.

To me it looks, that overridden ID's are a bit harder to make local, because they don't require lib file to exist if I understand it correctly. But to make it local it wants the file. I think this could be done through RNA function, but currently it isn't implemented, so it's a feature request really.

Will poke @mont29 if he has something to add, but will close for now.

Checked the code, and it doesn't consider overridden ID as linked. This could be achieved with `bpy.ops.outliner.id_operation()` though. To me it looks, that overridden ID's are a bit harder to make local, because they don't require lib file to exist if I understand it correctly. But to make it local it wants the file. I think this could be done through RNA function, but currently it isn't implemented, so it's a feature request really. Will poke @mont29 if he has something to add, but will close for now.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-03-01 20:53:53 +01:00
Author

Thank for replying. In fact, doing it using the operator is never the easiest.

Also, even though I completely understand the limitation, I believe this shouldn't fail silently at least. Otherwise we only see it doesn't work and believe it is a bug.

Thank for replying. In fact, doing it using the operator is never the easiest. Also, even though I completely understand the limitation, I believe this shouldn't fail silently at least. Otherwise we only see it doesn't work and believe it is a bug.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105343
No description provided.