Fix #105343: id.make_local() doesn't work for overridden data.

RNA `make_local` call isfairly low-level and by-passes
`BKE_library_make_local`, so it also needs to handle the liboverride
case itself.